2003/06/09 13:49 muppetman

	* xs/GtkClipboard.xs: new stuff; 2.2.x only, so only smoke-tested on
	my end...

2003/06/08 16:40 muppetman

	* api.pod: merged in stuff from the braindump

2003/06/07 18:51 muppetman

	* xs/GtkTreeModel.xs: implemented treemodel->foreach, and some others.

	* xs/GtkTreeView.xs: argument defaults patch from rene seindal 

2003/06/06 23:55 muppetman

	* Gtk2.pm, xs/GdkProperty.xs, xs/GdkSelection.xs: added stuff for
	handling GdkAtoms and selections and such.  it appears to have
	some problems, but i don't know if they are binding problems or what.

	* MANIFEST: added several missing files, make dist makes something
	appropriate, now.

	* Gtk2.pm: bumped version number to 0.22 for public release.

2003/06/06 11:39 pcg

        * xs/GtkTextTagTable.xs: new file, all methods of GtkTextTagTable.

2003/06/05 10:53 rwmcfa1

	* t/[0-9]*: prepended 0's onto the front of the 0 - 9 tests to improve
	order. 

2003/06/02 18:10 muppetman

	another patch from marc lehmann:

	* xs/GtkAdjustment.xs: added accessors and mutators for struct members

	* gtk-demo/textview.pl: fix demo to actually use unicode as opposed
	to the garbled latin1.

2003/06/02 12:24 muppetman

	* xs/GtkDialog.xs: allow enum strings as well as integers to
	$dialog->response

	* xs/GdkEvent.xs: remove unused parameters

2003/06/01 22:52 muppetman

	* xs/GtkAspectFrame.xs, GtkTreeSortable.xs: fixed package typos;
	change Gtk2::AspectFrame::set to set_params to avoid clashing with
	Glib::Object::set.  (patch from Marc Lehmann, pcg at goof dot com)

	* xs/GtkTreeSelection.xs: patch from rene seindal, remove model from
	return value of get_selected_rows.

2003/05/31 11:07 rwmcfa1

	* xs/GtkRc.xs: implemented gtk_rc_set_default_files

2003/05/28 14:02 muppetman

	* Makefile.PL: decent diagnostic messages for missing Glib modules

2003/05/27 20:44 rwmcfa1

	* xs/GtkSelection.xs: gtk 2.2 function
	gtk_selection_owner_set_for_display didn't have the appropriate C_ARGS